# ml-teaching-streamlit

./: .gitignore  README.md  pyproject.toml
ml_hsc_teaching_lab/: streamlit_app.py
ml_hsc_teaching_lab/pages/: 3_Logistic_Regression.py
pages/: 1_Linear_Regression.py  1_Supervised_linear_regression.py  2_Polynomial_Regression.py  3_Logistic_Regression.py  4_Decision_Trees.py  5_Neural_Networks.py  6_K_Nearest_Neighbours.py
teachml/: __init__.py  data.py
teachml/supervised/: __init__.py  linear.py
