[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-teaching-streamlit"
version = "0.1.0"
description = "Streamlit teaching demos for supervised ML (starting with linear regression)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.28.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["teachml*"]
